# DepFileScan

./: .replit  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  demo.py  dependencies.txt  main.py  pyproject.toml  replit.md  requirements.txt
dependency_reader/: cli.py  conflict_detector.py  models.py  pypi_client.py  python_scanner.py  security_checker.py  utils.py
dependency_reader/parsers/: __init__.py  pipfile_parser.py
depfilescan/: README.md  cli.py  conflict_detector.py  license_analyzer.py
depfilescan/parsers/: README.md  pyproject_parser.py
docs/: README.md
docs/examples/: README.md  sample_pyproject.toml  sample_python_file.py  sample_requirements.txt
examples/sample_project/: Pipfile  pyproject.toml  requirements.txt
examples/sample_project/src/: main.py
pydepman/: __init__.py  utils.py
pydepman/parsers/: requirements.py
tests/: conftest.py
tests/performance/: __init__.py  test_benchmarks.py
