
[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = "Sample project for dependency analysis"
authors = ["Developer <dev@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.0"
flask = "^2.2.0"
fastapi = "^0.85.0"
sqlalchemy = "^1.4.0"
pydantic = "^1.10.0"
django = "4.1.0"  # Pinned for demo - security vulnerability

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
mypy = "^0.991"
flake8 = "^5.0.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.0.0"
mkdocs = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
